--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Taewoon Kim
+subtitle: Artificial Intelligence Researcher & Engineer
 ---
+
+I love diving into AI stuff! I’m both a researcher and engineer in the AI world.
+It’s like finding the sweet spot between brainstorming new ideas and making them
+actually work in real life. I believe figuring out and improving artificial
+general intelligence is super important for all of us. I’m all about
+open-sourcing projects because it’s the best way to make AI better together.
+<strong>Feel free to check out what I’m up to, by clicking on the icons in the below
+footer.</strong>
