--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: home
 title: Taewoon Kim
 subtitle: Artificial Intelligence Researcher & Engineer
+cover-img: /assets/img/ai-human-collab.png
+thumbnail-img: /assets/img/ai-human-collab.png
+tags: [about me, index, home]
+author: Taewoon Kim
 ---
 
 I love diving into AI stuff! I’m both a researcher and engineer in the AI world.
@@ -9,5 +13,7 @@ It’s like finding the sweet spot between brainstorming new ideas and making th
 actually work in real life. I believe figuring out and improving artificial
 general intelligence is super important for all of us. I’m all about
 open-sourcing projects because it’s the best way to make AI better together.
-<strong>Feel free to check out what I’m up to, by clicking on the icons in the below
-footer.</strong>
+<strong
+  >Feel free to check out what I’m up to, by clicking on the icons in the below
+  footer.</strong
+>
