--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 ---
 layout: home
-title: Taewoon Kim
+title: I'm Tae
 subtitle: Artificial Intelligence Researcher & Engineer
-cover-img: /assets/img/ai-human-collab.png
-thumbnail-img: /assets/img/ai-human-collab.png
-tags: [about me, index, home]
+cover-img: /assets/img/ai-work-ai.png
+thumbnail-img: /assets/img/ai-work-ai.png
+tags: [about me, home]
 author: Taewoon Kim
 ---
 
 I love diving into AI stuff! I’m both a researcher and engineer in the AI world.
-It’s like finding the sweet spot between brainstorming new ideas and making them
-actually work in real life. I believe figuring out and improving artificial
-general intelligence is super important for all of us. I’m all about
-open-sourcing projects because it’s the best way to make AI better together.
+I've studied and worked in several countries, including South Korea, Germany,
+and the Netherlands. Being a researcher and engineer is like finding the sweet
+spot between brainstorming new ideas and making them actually work in real life.
+I believe figuring out and improving artificial general intelligence is super
+important for all of us. I’m all about open-sourcing projects because it’s the
+best way to make AI better together.
 <strong
   >Feel free to check out what I’m up to, by clicking on the icons in the below
   footer.</strong
