--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ I believe figuring out and improving artificial general intelligence is super
 important for all of us. I’m all about open-sourcing projects because it’s the
 best way to make AI better together.
 <strong
-  >Feel free to check out what I’m up to, by clicking on the icons in the below
+  >Feel free to check out what I’m up to, by clicking on the icons at the below
   footer.</strong
 >
+
+<hr>
