--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@ best way to make AI better together.
 <br>
 <br>
 <strong
-  >Feel free to check out what I’m up to, by clicking on the icons at the below
-  footer.</strong
->
+  >Feel free to check out my blog, projects, and CV in the menu, and also the media
+  icons at the below footer.</strong>
 
