--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: I'm Tae
+title: I'm Taewoon
 subtitle: Artificial Intelligence Researcher & Engineer
 cover-img: /assets/img/ai-human-collab.png
 thumbnail-img: /assets/img/ai-human-collab.png
