--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: I'm Taewoon
-subtitle: Artificial Intelligence Researcher & Engineer
+subtitle: AI Researcher & Engineer
 cover-img: /assets/img/ai-human-collab.png
 thumbnail-img: /assets/img/ai-human-collab.png
 tags: [about me, home]
