--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@ tags: [about me, home]
 author: Taewoon Kim
 ---
 
-I love diving into AI stuff! I’m both a researcher and engineer in the AI world.
-I've studied and worked in several countries, including South Korea, Germany,
-and the Netherlands. Being a researcher and engineer is like finding the sweet
-spot between brainstorming new ideas and making them actually work in real life.
-I believe figuring out and improving artificial general intelligence is super
-important for all of us. I’m all about open-sourcing projects because it’s the
-best way to make AI better together.
+I'm all about making AI work for people, blending the best of research and engineering.
+From my PhD work, I started HumemAI, where we're doing something cool: making AI think
+more like us using ideas from cognitive science. It's not just any AI; it’s designed to
+communicate better with humans. Right now, I'm on the lookout for smart folks and some
+funding to help grow this idea. My goal? To make AI not just smart, but also easy for
+everyone to use and benefit from.
 
-<br>
-<br>
+<br />
+<br />
 <strong
   >Feel free to check out my blog, projects, and CV in the menu, and also the media
-  icons at the below footer.</strong>
-
+  icons at the below footer.</strong
+>
