--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ author: Taewoon Kim
 ---
 
 I'm all about making AI work for people, blending the best of research and engineering.
-From my PhD work, I started HumemAI, where we're doing something cool: making AI think
-more like us using ideas from cognitive science. It's not just any AI; it’s designed to
-communicate better with humans. Right now, I'm on the lookout for smart folks and some
-funding to help grow this idea. My goal? To make AI not just smart, but also easy for
-everyone to use and benefit from.
+From my PhD work, I started <a href="https://humem.ai/">HumemAI</a>, where we're doing
+something cool: making AI think more like us using ideas from cognitive science. It's
+not just any AI; it’s designed to communicate better with humans. Right now, I'm on the
+lookout for smart folks and some funding to help grow this idea. My goal? To make AI not
+just smart, but also easy for everyone to use and benefit from.
 
 <br />
 <br />
