Update AI researcher / engineer job availability

--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@ author: Taewoon Kim
 
 I'm all about making AI work for people, blending the best of research and engineering.
 From my PhD work, I started <a href="https://humem.ai/">HumemAI</a>, where we're doing
-something cool: making AI think more like us using ideas from cognitive science. It's
-not just any AI; it’s designed to communicate better with humans. Right now, I'm on the
-lookout for smart folks and some funding to help grow this idea. My goal? To make AI not
-just smart, but also easy for everyone to use and benefit from.
+something cool: making AI think and behave more like us using ideas from cognitive
+science. It's not just any AI; it’s designed to communicate better with humans.
 
 <br />
 <br />
-<strong
-  >Feel free to check out my blog, projects, and CV in the menu, and also the media
-  icons at the below footer.</strong
->
+<strong style="background-color: yellow">
+  I am seeking to be hired as an AI researcher / engineer job starting from 01-Jan-2025.
+</strong>
