--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: home
 title: I'm Taewoon
 subtitle: AI Researcher & Engineer
-cover-img: /assets/img/ai-human-collab.png
-thumbnail-img: /assets/img/ai-human-collab.png
+<!-- cover-img: /assets/img/ai-human-collab.png
+thumbnail-img: /assets/img/ai-human-collab.png -->
 tags: [about me, home]
 author: Taewoon Kim
 ---
