Update social network links in _config.yml

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@ science. It's not just any AI; it’s designed to communicate better with humans
 
 <br />
 <br />
+
+Feel free to reach out if you're interested in AI or just want to chat! You can reach
+out to me at the bottom of this page, e.g., email, LinkedIn, GitHub, X, YouTube, and
+Google Scholar.
+
+<br />
+<br />
+
 <strong style="background-color: yellow">
   I am seeking to be hired as an AI researcher / engineer job starting from 01-Jan-2025.
 </strong>
