Update navbar links in _config.yml

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@ tags: [about me, home]
 author: Taewoon Kim
 ---
 
-I'm all about making AI work for people, blending the best of research and engineering.
+I believe that AI will replace us. Can't wait for that day to come!
+
+<br />
+<br />
+
+Hope they can give me a job. 🤖
+
+<!-- I'm all about making AI work for people, blending the best of research and engineering.
 From my PhD work, I started <a href="https://humem.ai/">HumemAI</a>, where we're doing
 something cool: making AI think and behave more like us using ideas from cognitive
 science. It's not just any AI; it’s designed to communicate better with humans.
@@ -25,4 +32,4 @@ Google Scholar.
 
 <strong style="background-color: yellow">
   I am seeking to be hired as an AI researcher / engineer job starting from 01-Jan-2025.
-</strong>
+</strong> -->
