--- a/index.html
+++ b/index.html
@@ -8,28 +8,7 @@ tags: [about me, home]
 author: Taewoon Kim
 ---
 
-I believe that AI will replace us. Can't wait for that day to come!
-
-<br />
-<br />
-
-Hope they can give me a job. 🤖
-
-<!-- I'm all about making AI work for people, blending the best of research and engineering.
-From my PhD work, I started <a href="https://humem.ai/">HumemAI</a>, where we're doing
-something cool: making AI think and behave more like us using ideas from cognitive
-science. It's not just any AI; it’s designed to communicate better with humans.
-
-<br />
-<br />
-
-Feel free to reach out if you're interested in AI or just want to chat! You can reach
-out to me at the bottom of this page, e.g., email, LinkedIn, GitHub, X, YouTube, and
-Google Scholar.
-
-<br />
-<br />
-
-<strong style="background-color: yellow">
-  I am seeking to be hired as an AI researcher / engineer job starting from 01-Jan-2025.
-</strong> -->
+I imagine a future where machines and humans coexist. I'm generally interested in
+technology and science that can help us get there. I'm currently working on HumemAI (A
+Machine With Human-Like Memory Systems) that use both symbolic and sub-symbolic AI
+techniques to build a machine that can learn and reason like humans.
