Update personal introduction in index.html to reflect current focus on full-stack AI systems and consulting services.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ tags: [about me, home]
 author: Taewoon Kim
 ---
 
-I imagine a future where machines and humans coexist. I'm generally interested in
-technology and science that can help us get there. I'm currently working on HumemAI (A
-Machine With Human-Like Memory Systems) that use both symbolic and sub-symbolic AI
-techniques to build a machine that can learn and reason like humans.
+Hi! I build full-stack AI systems, offering B2B services that include AI/ML model
+development and consulting.
+
+Also, check my startup HumemAI! 😎
