Update pagination settings and enhance post layout with thumbnails and excerpts

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ tags: [about me, home]
 author: Taewoon Kim
 ---
 
-Hi! I build full-stack AI systems, offering B2B services that include AI/ML model
+<!-- Hi! I build full-stack AI systems, offering B2B services that include AI/ML model
 development and consulting.
 
-Also, check my startup HumemAI! 😎
+Also, check my startup HumemAI! 😎 -->
